Fix spacing and alignment issues in section

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ nav{
     gap: 5px;
     background: #fcfafa;
     border: rgb(248, 244, 244) 1px solid;
+    border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgb(238, 238, 238);
     text-align: left;
     padding: 20px;
@@ -150,7 +151,7 @@ nav{
     /* margin-bottom: 20px; */
 }
 .price-card .ul{
-
+    margin-top: 20px;
     padding-left: 20px;
     margin-bottom: 20px;
 }
@@ -162,8 +163,20 @@ nav{
 .price-card .ul li::marker {
   color: blue;
 }
+.button-container{
+    text-align: center;
+}
 .btn-outline{
     border: 1px solid #1D4ED8;
     color: #1D4ED8;
     background-color: white;
+}
+.btn-width{
+    width: 300px;
+    margin-top: 20px;
+}
+
+#card-black{
+    background-color: #0D1B2A;
+    color: white;
 }
